[package]
name = "hi"
version = "0.1.0"
authors = ["hwipl"]
edition = "2024"

[dependencies]
# use current git version dated 2026-01-07 to remove lru dependency for dependabot alert
libp2p = { git = "https://github.com/libp2p/rust-libp2p", rev = "5e3519fb66b92c7f7c0dc744ab360fd8b669fe54", features = ["gossipsub", "mdns", "request-response", "tcp", "tls", "dns", "tokio", "noise", "yamux", "macros"] }
futures = "0.3.31"
minicbor = { version = "2.1.3", features = ["std", "derive"] }
async-trait = "0.1.89"
clap = { version = "4.5.54", features = ["derive"] }
dirs = "6.0.0"
log = "0.4.29"
env_logger = "0.11.8"
rand = "0.9.2"
whoami = "2.0.2"
# disable default features to fix issue with old time version,
# should be resolved in next chrono version
chrono = { version = "0.4.43", default-features = false, features = ["clock", "std", "wasmbind"] }
tokio = { version = "1.49.0", features = ["fs", "io-std"] }
